@@ -85,6 +85,7 @@ public final class Skills {
 		IRON_WILL = 1301006,
 		SPEARMAN_HYPER_BODY = 1301007,
 
+		SACRIFICE = 1311005,
 		DRAGON_ROAR = 1311006,
 		POWER_CRASH = 1311007,
 		DRAGON_BLOOD = 1311008,
